--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "description": "Landing page con gulp ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "supervisor app.js"
   },
   "author": "Salvador Carreón",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "express-method-override": "0.0.3",
+    "mongoose": "^4.6.0",
+    "morgan": "^1.7.0",
+    "mysql": "^2.11.1",
+    "pug": "^0.1.0",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
@@ -28,6 +36,7 @@
     "gulp-uncss": "^1.0.6",
     "gulp-useref": "^3.1.2",
     "gulp-webp": "^2.3.0",
-    "imagemin-pngquant": "^5.0.0"
+    "imagemin-pngquant": "^5.0.0",
+     "gulp-nodemon": "latest"
   }
 }
